--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* =========================== generic CSS =========================== */
 * {
     margin: 0;
     padding: 0;
@@ -8,7 +9,42 @@ html {
     height: 1000px;
 }
 
-/* header section */
+.section-title {
+    padding-top: 90px;
+    padding-bottom: 50px;
+}
+
+.section-title h2 {
+    position: relative;
+    text-align: center;
+    color: #333;
+    font-size: 30px;
+    font-weight: 400;
+    text-transform: uppercase;
+}
+
+.section-title h2::after {
+    content: "";
+    position: absolute;
+    bottom: -20px;
+    left: 50%;
+    width: 60px;
+    height: 1px;
+    background-color: #123CF3;
+    margin-left: -30px;
+}
+
+.section-title p {
+    color: #333;
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 300;
+    text-align: center;
+    margin-top: 45px;
+}
+
+
+/* =========================== header section =========================== */
 .header {
     background-image: url('/images/header-bg.jpg');
     background-attachment: fixed;
@@ -51,4 +87,80 @@ html {
     width: 100%;
 }
 
-/* About Section */
+/* =========================== about us section =========================== */
+.section-title {
+    margin-top: 100px;
+}
+
+.choose-us-wrapper {
+    padding-top: 50px;
+}
+
+.about-iphone {}
+
+.about-iphone>img {
+    margin-top: 8px;
+}
+
+.choose-us-title {
+    padding-bottom: 50px;
+}
+
+.choose-us-title h2 {
+    text-transform: uppercase;
+    font-weight: 800;
+    font-size: 30px;
+    line-height: 37px;
+    position: relative;
+}
+
+.choose-us-title h2::after {
+    content: "";
+    position: absolute;
+    bottom: -12px;
+    left: 0;
+    width: 70px;
+    height: 1px;
+    background-color: #129CF3;
+}
+
+.choose-us-title P {
+    margin-top: 40px;
+    font-size: 19px;
+    line-height: 24px;
+}
+
+.choose-us-des {}
+
+.choose-us-item {
+    position: relative;
+    padding-bottom: 4px;
+    padding-left: 80px;
+}
+
+.choose-us-item div {
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.choose-us-item div i {
+    font-size: 55px;
+    color: #129CF3;
+    transition: all 1s;
+    -webkit-transition: all 1s;
+    -o-transition: all 1s;
+    -moz-transition: all 1s;
+}
+
+.choose-us-item h3 {
+    color: #343434;
+    text-transform: uppercase;
+    font-size: 20px;
+    font-weight: 800;
+}
+
+.choose-us-item p {
+    color: #727272;
+    font-size: 15px;
+}
