--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ html {
 
 /* =========================== header section =========================== */
 .header {
-    background-image: url('/images/header-bg.png');
+    background-image: url('/images/logo.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-position: 50% 50%;
