--- a/css/style.css
+++ b/css/style.css
@@ -164,3 +164,62 @@ html {
     color: #727272;
     font-size: 15px;
 }
+
+
+/* =========================== testimonial section =========================== */
+
+#testimonial {
+    background-image: url(.././images/testimonial-bg.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -webkit-background-size: cover;
+    background-position: 50% 50%;
+}
+
+.testimonial-overlay {
+    background-color: rgba(31, 31, 31, 0.75);
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.carousel-indicators {
+    bottom: -30px;
+}
+
+.carousel-item img {
+    border: 2px solid #123CF3;
+    border-radius: 50%;
+    padding: 3px;
+}
+
+.testimonial-caption {
+    padding-bottom: 70px;
+}
+
+.testimonial-caption h2 {
+    color: #129CF3;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 30px;
+    margin-top: 25px;
+}
+
+.testimonial-caption h4 {
+    color: #129CF3;
+}
+
+.testimonial-caption h4 span {
+    color: #d8d8d8;
+    font-style: italic;
+    font-weight: 300;
+}
+
+.testimonial-caption p {
+    color: #d8d8d8;
+    font-size: 18px;
+    line-height: 27px;
+    padding-top: 50px;
+}
