--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ html {
 
 /* =========================== Home Section =========================== */
 .home {
-  background-image: url(".././images/home-bg.png");
+  background-image: url(http://d2dtjea2l357xb.cloudfront.net/home-bg.png);
   background-attachment: fixed;
   background-repeat: no-repeat;
   background-position: 50% 50%;
