--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,4 @@
-/* =========================== generic CSS =========================== */
-* {
+=========================== generic CSS =========================== * {
   margin: 0;
   padding: 0;
 }
@@ -75,15 +74,18 @@
 .home-btns {
   margin-top: 90px;
   margin-bottom: 50px;
+  text-align: center;
 }
 
 .home-btns a {
   padding: 15px 50px;
   text-transform: uppercase;
+  margin-bottom: 10px;
 }
 
 .home-phone > img {
   width: 100%;
+  display: none;
 }
 
 .btn-download {
@@ -115,6 +117,18 @@
   }
 }
 
+/* Small devices (landscape phones, 576px and up) */
+@media (min-width: 576px) {
+  .home-btns {
+    text-align: start;
+    margin-bottom: 0px;
+  }
+
+  .home-phone > img {
+    display: block;
+  }
+}
+
 /* =========================== about us section =========================== */
 .section-title {
   margin-top: 100px;
@@ -124,11 +138,9 @@
   padding-top: 50px;
 }
 
-.about-iphone {
-}
-
 .about-iphone > img {
   margin-top: 8px;
+  width: 100%;
 }
 
 .choose-us-title {
@@ -190,6 +202,16 @@
 .choose-us-item p {
   color: #727272;
   font-size: 15px;
+}
+
+.about-iphone {
+  display: none;
+}
+
+@media (min-width: 576px) {
+  .about-iphone {
+    display: block;
+  }
 }
 
 /* =========================== testimonial section =========================== */
@@ -393,6 +415,70 @@
   border-radius: 100%;
 }
 
+/* owl carousel */
+.main-content {
+  position: relative;
+}
+
+.main-content .owl-theme .custom-nav {
+  position: absolute;
+  top: 35%;
+  left: 0;
+  right: 0;
+}
+
+.owl-carousel .active span {
+  width: 10px;
+  height: 10px;
+  margin: 5px 7px;
+  background: #129cf3 !important;
+  display: block;
+  -webkit-backface-visibility: visible;
+  -webkit-transition: opacity 200ms ease;
+  -moz-transition: opacity 200ms ease;
+  -ms-transition: opacity 200ms ease;
+  -o-transition: opacity 200ms ease;
+  transition: opacity 200ms ease;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+  border-radius: 30px;
+}
+
+.main-content .owl-theme .custom-nav .owl-prev,
+.main-content .owl-theme .custom-nav .owl-next {
+  position: absolute;
+  height: 100px;
+  color: inherit;
+  background: none;
+  border: none;
+  z-index: 100;
+}
+
+.main-content .owl-theme .custom-nav .owl-prev i,
+.main-content .owl-theme .custom-nav .owl-next i {
+  font-size: 2.5rem;
+  color: #129cf3;
+}
+
+.main-content .owl-theme .custom-nav .owl-prev {
+  left: 0;
+}
+
+.main-content .owl-theme .custom-nav .owl-next {
+  right: 0;
+}
+
+.owl-next:focus,
+.owl-prev:focus {
+  outline: none;
+}
+
+.main-content .owl-theme .custom-nav .owl-next i:hover,
+.main-content .owl-theme .custom-nav .owl-prev i:hover {
+  font-size: 3rem;
+  transition: font-size 0.5s;
+}
+
 /* =========================== counter section =========================== */
 .counter {
   background-image: url(https://d2dtjea2l357xb.cloudfront.net/counter-bg.jpg);
@@ -411,7 +497,6 @@
 .counter-item i {
   font-size: 60px;
   color: #129cf3;
-  margin-left: 100px;
   width: 100%;
 }
 
@@ -490,7 +575,7 @@
 .input-wrapper .btn {
   position: absolute;
   right: 0;
-  width: 35%;
+  width: 100%;
   text-transform: uppercase;
 }
 
@@ -511,6 +596,12 @@
   padding: 40px;
 }
 
+@media (min-width: 576px) {
+  .input-wrapper .btn {
+    width: 35%;
+  }
+}
+
 /* =========================== up arrow section =========================== */
 .up-arrow {
   position: fixed;
@@ -525,17 +616,49 @@
   font-size: 28px;
 }
 
-/* =========================== up arrow section =========================== */
+/* =========================== footer section =========================== */
 .footer {
   background-color: #f9f9f9;
   padding: 30px 15px;
 }
 
-.footer .languages .btn {
+.dropdown-toggle {
   padding: 10px 0;
-  width: 160px;
+  width: 100%;
 }
 
-.footer .languages a {
+.dropdown-menu {
   cursor: pointer;
+  width: 100%;
+}
+
+.footer .container-fluid {
+  display: flex;
+  flex-direction: column-reverse;
+  text-align: center;
+}
+
+.languages {
+  margin-bottom: 25px;
+}
+
+@media (min-width: 576px) {
+  .footer .container-fluid {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .languages {
+    margin-bottom: 0px;
+  }
+
+  .dropdown-toggle {
+    padding: 10px 0;
+    width: 160px;
+  }
+
+  .dropdown-menu {
+    cursor: pointer;
+    width: 160px;
+  }
 }
